mcm offline mode and video download

--- a/widget/index.html
+++ b/widget/index.html
@@ -15,6 +15,8 @@
     <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../scripts/smartcrop.js"></script>
     <script src="../../../scripts/buildfire.min.js"></script>
+    <script src="../../../scripts/buildfire/services/fileSystem/fileManager.js"></script>
+    <script src="../../../scripts/buildfire/components/drawer/drawer.js"></script>
     <script src="../../../scripts/angular/angular.min.js"></script>
     <script src="../../../scripts/angular/angular-route.min.js"></script>
     <script src="../../../scripts/angular/angular-animate.min.js"></script>
@@ -24,8 +26,10 @@
     <script src="js/shared/stringsConfig.js"></script>
     <script src="js/shared/strings.js"></script>
     <script src="../../../scripts/angular/ng-infinite-scroll.custom.js"></script>
-
-    <script src="https://player.vimeo.com/api/player.js"></script>
+    <script src = "js/data/offlineMedia.js"></script>
+    <script src = "js/shared/offlineAccess.js"></script>
+    <!-- <script src="https://player.vimeo.com/api/player.js"></script> -->
+    <script src="js/shared/vimeo.js"></script>
 
     <!--app js-->
     <script src="app.js"></script>
@@ -35,6 +39,7 @@
     <script src="filters.js"></script>
     <script src="modals.js"></script>
     <script src="bookmarkHandler.js"></script>
+    <script src="downloadHandler.js"></script>
     <!--controllers js-->
     <script src="controllers/widget.home.controller.js"></script>
     <script src="controllers/widget.media.controller.js"></script>
