--- a/control/content/index.html
+++ b/control/content/index.html
@@ -29,6 +29,11 @@
     <script src="assets/js/angular-csv.js"></script>
     <script src="assets/js/ng-clip.min.js"></script>
     <script src="assets/js/ZeroClipboard.min.js"></script>
+    <script src="../../widget/js/dataAcess/Categories.js"></script>
+    <script src="../../widget/js/dataAcess/Subcategories.js"></script>
+    <script src="../../widget/js/data/Category.js"></script>
+    <script src="../../widget/js/data/Subcategory.js"></script>
+
 
     <script src="app.js"></script>
     <script src="enums.js"></script>
@@ -39,6 +44,8 @@
     <!-- Controllers -->
     <script src="controllers/content.home.controller.js"></script>
     <script src="controllers/content.media.controller.js"></script>
+    <script src="controllers/content.categoryHome.controller.js"></script>
+    <script src="controllers/content.category.controller.js"></script>
     <link rel="stylesheet" href="../../../../styles/transitionAnimation.css">
     <meta charset="UTF-8">
 
@@ -46,7 +53,7 @@
     <!-- <link rel="stylesheet" href="assets/css/jquery-ui.css"/> -->
     <link href="../../../../styles/helper.css" rel="stylesheet">
     <link href="../../../../styles/siteIcons.css" rel="stylesheet">
-    <!-- <link href="assets/css/control.content.css" rel="stylesheet"> -->
+    <link href="assets/css/control.content.css" rel="stylesheet">
     <link rel="stylesheet" href="../content/assets/css/reset.css">
     <link rel="stylesheet" href="../content/assets/css/bf_base.css">
     <link rel="stylesheet" href="../content/assets/css/sortable.css">
