--- a/widget/index.html
+++ b/widget/index.html
@@ -56,7 +56,9 @@
     <script src="assets/js/angular-sanitize.min.js"></script>
     <script src="assets/js/videogular.min.js"></script>
     <script src="assets/js/vg-youtube.min.js"></script>
-    <script src="assets/js/vg-vimeo.min.js"></script>
+    <!-- <script src="assets/js/vg-vimeo.min.js"></script> -->
+    <!-- this vg-vimeo-ahmad.js updated version of original vg-vimeo.min.js edited by Ahmad Abu Osbeh -->
+    <script src="assets/js/vg-vimeo-ahmad.js"></script>
     <script src="assets/js/vg-controls.min.js"></script>
     <script src="assets/js/vg-overlay-play.min.js"></script>
     <script src="../../../scripts/angular/angular-touch.js"></script>
