added count view

--- a/widget/index.html
+++ b/widget/index.html
@@ -23,6 +23,7 @@
     <script src="../../../scripts/angular/ui-bootstrap.min.js"></script>
     <script src="../../../scripts/owlCarousel/owlCarousel.js"></script>
     <!-- JS -->
+    <script src="js/shared/analytics.js"></script>
     <script src="js/shared/stringsConfig.js"></script>
     <script src="js/shared/strings.js"></script>
     <script src="../../../scripts/angular/ng-infinite-scroll.custom.js"></script>
