--- a/control/content/index.html
+++ b/control/content/index.html
@@ -26,6 +26,7 @@
     <script src="assets/js/sortable.js"></script>
     <script src="../../../../scripts/angular/ng-infinite-scroll.custom.js"></script>
     <script src="../../widget/js/shared/Deeplink.js"></script>
+    <script src="../../widget/js/shared/analytics.js"></script>
     <script src="assets/js/angular-csv.js"></script>
     <script src="assets/js/ng-clip.min.js"></script>
     <script src="assets/js/ZeroClipboard.min.js"></script>
@@ -51,6 +52,10 @@
 
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="assets/css/jquery-ui.css"/> -->
+    <link
+    href="../../../../styles/control/siteIcons-control.css"
+    rel="stylesheet"
+  />
     <link href="../../../../styles/helper.css" rel="stylesheet">
     <link href="../../../../styles/siteIcons.css" rel="stylesheet">
     <link href="assets/css/control.content.css" rel="stylesheet">
