Fix Flashes screen WEB-6108

--- a/widget/index.html
+++ b/widget/index.html
@@ -73,6 +73,7 @@
     <div class="main_view">
         <div ng-class="showFeed ? 'showing' : 'notshowing'" data-back-img="{{backgroundImage}}" id="feedView" class="content slide infinite-scroll-parent" 
         scrolly="loadMore()"
+        ng-style="showFeed ? {'display':'block'} : {'display':'none'}"
         >
             <div ng-controller="WidgetHomeCtrl as WidgetHome">
                 <div ng-include="'templates/home.html'">
