--- a/widget/index.html
+++ b/widget/index.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </div>
-        <div ng-class="WidgetHome.deepLink ? 'noSlide' : 'slide'"
+        <div ng-class="WidgetHome.deepLink ? 'no-slide' : 'slide'"
             data-back-img="{{backgroundImage}}"
             class="content infinite-scroll-parent"
             ng-if="!showFeed">
