--- a/widget/index.html
+++ b/widget/index.html
@@ -121,7 +121,7 @@
 <script src="./utils/stringsKeys.js"></script>
 <script src="./utils/strings.js"></script>
 <script>
-    initLangStr();
+    initLanguageStrings();
 
     function callPlayer(frame_id, func, args) {
         if (window.jQuery && frame_id instanceof jQuery) frame_id = frame_id.get(0).id;
