--- a/widget/index.html
+++ b/widget/index.html
@@ -121,7 +121,8 @@
 <script src="./utils/stringsKeys.js"></script>
 <script src="./utils/strings.js"></script>
 <script>
-
+    initLanguageStrings();
+    
     function callPlayer(frame_id, func, args) {
         if (window.jQuery && frame_id instanceof jQuery) frame_id = frame_id.get(0).id;
         var iframe = document.getElementById(frame_id);
