Feat: Flag opened items

--- a/widget/index.html
+++ b/widget/index.html
@@ -44,6 +44,7 @@
     <script src="modals.js"></script>
     <script src="bookmarkHandler.js"></script>
     <script src="downloadHandler.js"></script>
+    <script src="openedMediaHandler.js"></script>
     <!--controllers js-->
     <script src="controllers/widget.home.controller.js"></script>
     <script src="controllers/widget.media.controller.js"></script>
