--- a/widget/index.html
+++ b/widget/index.html
@@ -96,8 +96,8 @@
             ng-click="addAllToGlobalPlaylist($event)"
             ng-class="{'add-button-only': (!showGlobalPlaylistNavButton || !globalPlaylistPlugin), 'hidden': showGlobalAddAllToPlaylistButton || !globalPlaylistPlugin}"
         >
-            <div ng-if="!areAllInGlobalPlaylist()" class="play-list-icon add-button-icon"></div>
-            <div ng-if="areAllInGlobalPlaylist()" class="play-list-icon remove-button-icon"></div>
+            <div ng-if="!areAllInGlobalPlaylist()" class="play-list-icon add-button-icon" style="background-color: #FFF;"></div>
+            <div ng-if="areAllInGlobalPlaylist()" class="play-list-icon remove-button-icon" style="background-color: #FFF;"></div>
         </button>
         <button
             class="btn add-button-only go-to-button"
