Feat : add MediaMetaData model

--- a/widget/index.html
+++ b/widget/index.html
@@ -32,6 +32,7 @@
     <script src="js/dataAcess/Subcategories.js"></script>
     <script src="js/data/Category.js"></script>
     <script src="js/data/Subcategory.js"></script>
+    <script src="js/data/MediaMetaData.js"></script>
     <!-- <script src="https://player.vimeo.com/api/player.js"></script> -->
     <script src="js/shared/vimeo.js"></script>
 
