Chore: refactor the code & fix bugs

--- a/widget/index.html
+++ b/widget/index.html
@@ -42,10 +42,10 @@
     <script src="services.js"></script>
     <script src="directives.js"></script>
     <script src="filters.js"></script>
+    <script src="handlers.js"></script>
     <script src="modals.js"></script>
     <script src="bookmarkHandler.js"></script>
     <script src="downloadHandler.js"></script>
-    <script src="openedMediaHandler.js"></script>
     <!--controllers js-->
     <script src="controllers/widget.home.controller.js"></script>
     <script src="controllers/widget.media.controller.js"></script>
