feat(CP): remove font files
remove bf-base font files, since they are injected from the sdk link tag

--- a/control/settings/index.html
+++ b/control/settings/index.html
@@ -6,6 +6,8 @@
     <link href="../../../../styles/siteIcons.css" rel="stylesheet">
     <link href="./assets/css/control.settings.css" rel="stylesheet">
     <link href="./assets/css/bf_base.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="../../../../styles/control/bf-base.css">
+    <link href="../../../../styles/control/siteIcons-control.css" rel="stylesheet"/>
 
     <!--SDK js-->
     <script src="../../../../scripts/buildfire.min.js"></script>
@@ -27,7 +29,7 @@
 </head>
 <body>
 <div class="main_view">
-    <div class="content" ng-view=""></div>
+    <div class="content padding-left-fifteen padding-right-fifteen padding-top-twenty" ng-view=""></div>
 </div>
 </body>
 </html>
