feat(widget): handle CP/Sync for audios
handle CP/Sync for audios, and remove duplicate on update listeners

--- a/control/content/index.html
+++ b/control/content/index.html
@@ -101,9 +101,8 @@
   <template id="bulkActionTemplate">
     <div class="margin-left-auto">
       <div class="dropdown flex-left-auto margin-right-ten" dropdown>
-        <button class="btn btn-default text-left dropdown-toggle" data-toggle="dropdown" dropdown-toggle
-          aria-expanded="true">
-          <span class="pull-left">Bulk Actions</span>
+        <button class="btn btn-default text-left dropdown-toggle bulk-action-btn" data-toggle="dropdown" dropdown-toggle aria-expanded="true">
+          <span class="pull-left ellipsis">Bulk Actions</span>
           <span class="chevron icon-chevron-down pull-right"></span>
         </button>
         <ul class="dropdown-menu extended" role="menu">
