feat(CP): enhance CP controllers
enhance CP controllers naming

--- a/control/content/index.html
+++ b/control/content/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="mediaCenterContent">
 <head lang="en">
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
 
     <!--SDK js-->
     <script src="../../../../scripts/buildfire.min.js"></script>
@@ -43,11 +43,11 @@
     <script src="directives.js"></script>
     <script src="modals.js"></script>
     <!-- Controllers -->
-    <script src="controllers/content.categories.home.list.controller.js"></script>
-    <script src="controllers/content.media.home.list.controller.js"></script>
-    <script src="controllers/content.home.controller.js"></script>
-    <script src="controllers/content.media.controller.js"></script>
-    <script src="controllers/content.category.controller.js"></script>
+    <script src="controllers/homeController.js"></script>
+    <script src="controllers/addEditMediaController.js"></script>
+    <script src="controllers/addEditCategoryController.js"></script>
+    <script src="controllers/categoryHomeController.js"></script>
+    <script src="controllers/mediaHomeController.js"></script>
     <link rel="stylesheet" href="../../../../styles/transitionAnimation.css">
 
     <!-- CSS -->
