--- a/widget/index.html
+++ b/widget/index.html
@@ -10,7 +10,7 @@
     <link href="../../../scripts/owlCarousel/owlCarousel.css" rel="stylesheet">
     <link href="../../../styles/transitionAnimation.css" rel="stylesheet">
     <link href="assets/css/widget.app.css" rel="stylesheet">
-    <link href="assets/css/video-js.css" rel="stylesheet">
+    <link href="assets/lib/videojs/videojs.css" rel="stylesheet">
     <link href="assets/css/media.css" rel="stylesheet">
     <!--SDK js-->
     <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
@@ -56,10 +56,10 @@
     <script src="../../../scripts/buildfire/components/carousel/carousel.js"></script>
 
     <script src="assets/js/angular-sanitize.min.js"></script>
-    <script src="assets/videoJs/video.min.js"></script>
-    <script src="assets/videoJs/videojs-landscape-fullscreen.min.js"></script>
-    <script src="assets/videoJs/Youtube.min.js"></script>
-    <script src="assets/videoJs/videojs-vimeo.min.js"></script>
+    <script src="assets/lib/videojs/videojs.min.js"></script>
+    <script src="assets/lib/videojs/videojs-landscape-fullscreen.min.js"></script>
+    <script src="assets/lib/videojs/videojs-youtube.min.js"></script>
+    <script src="assets/lib/videojs/videojs-vimeo.min.js"></script>
     <script src="../../../scripts/angular/angular-touch.js"></script>
     <script src="../../../scripts/buildfire/components/toast/toast.js"></script>
 
