feat(bundle-file): add gulp to the project

--- a/control/design/index.html
+++ b/control/design/index.html
@@ -15,11 +15,12 @@
 
 
     <!-- JS -->
+    <!-- build:bundleJSFiles  -->
     <script src="app.js"></script>
     <script src="enums.js"></script>
     <script src="services.js"></script>
-    <!-- Controllers -->
     <script src="controllers/design.home.controller.js"></script>
+    <!-- endbuild -->
     <meta charset="UTF-8">
 </head>
 <body>
