--- a/widget/index.html
+++ b/widget/index.html
@@ -22,6 +22,7 @@
     <script src="../../../scripts/buildfire.min.js"></script>
     <script src="../../../scripts/buildfire/services/fileSystem/fileManager.js"></script>
     <script src="../../../scripts/buildfire/components/drawer/drawer.js"></script>
+    <script src="../../../scripts/buildfire/components/skeleton/skeleton.js"></script>
     <script src="../../../scripts/angular/angular.min.js"></script>
     <script src="../../../scripts/angular/angular-route.min.js"></script>
     <script src="../../../scripts/angular/angular-animate.min.js"></script>
