--- a/widget/index.html
+++ b/widget/index.html
@@ -71,10 +71,18 @@
     <script src="assets/lib/videojs/videojs-vimeo.min.js"></script>
     <script src="../../../scripts/angular/angular-touch.js"></script>
     <script src="../../../scripts/buildfire/components/toast/toast.js"></script>
+    <script src="../../../scripts/buildfire/components/listView@2.0/listView.js"></script>
+    <script src="../../../scripts/buildfire/components/swipeableDrawer/swipeableDrawer.js"></script>
+    <script src="../../../scripts/buildfire/services/reportAbuse/reportAbuse.js"></script>
+    <script src="../../../scripts/buildfire/components/comments/comments.js"></script>
 
     <!-- Audio player-->
     <script src="../../../scripts/buildfire/services/media/audioPlayer.js"></script>
     <script src="../../../scripts/buildfire/services/notifications/localNotifications.js"></script>
+
+    <link rel="stylesheet" href="../../../styles/components/comments/comments.css" />
+    <link rel="stylesheet" href="../../../styles/components/listView@2.0/listView.css" />
+    <link rel="stylesheet" href="../../../styles/components/swipeableDrawer/swipeableDrawer.css" />
 </head>
 
 <body class="body-scroll">
