handle layout new icons UI

--- a/widget/index.html
+++ b/widget/index.html
@@ -9,6 +9,8 @@
     <link href="../../../styles/siteIcons.css" rel="stylesheet">
     <link href="../../../scripts/owlCarousel/owlCarousel.css" rel="stylesheet">
     <link href="../../../styles/transitionAnimation.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
     <!-- build:bundleCSSFiles  -->
     <link href="assets/css/widget.app.css" rel="stylesheet">
