handle delete comments summery upon deleting media item

--- a/control/content/index.html
+++ b/control/content/index.html
@@ -16,6 +16,10 @@
     <script src="../../../../scripts/buildfire/components/images/thumbnail.js"></script>
     <script src="../../../../scripts/buildfire/services/searchEngine/searchEngine.js"></script>
     <script src="../../../../scripts/buildfire/components/control/listView/listView.js"></script>
+    <script src="../../../../scripts/buildfire/components/listView@2.0/listView.js"></script>
+    <script src="../../../../scripts/buildfire/components/swipeableDrawer/swipeableDrawer.js"></script>
+    <script src="../../../../scripts/buildfire/services/reportAbuse/reportAbuse.js"></script>
+    <script src="../../../../scripts/buildfire/components/comments/comments.js"></script>
     <script src="../../../../scripts/jquery/jquery-ui.min.js"></script>
     <script src="../../../../scripts/angular/ng-infinite-scroll.custom.js"></script>
     
