create new comments service

--- a/widget/index.html
+++ b/widget/index.html
@@ -48,6 +48,7 @@
     <script src="app.js"></script>
     <script src="enums.js"></script>
     <script src="services.js"></script>
+    <script src="services/commentsService.js"></script>
     <script src="directives.js"></script>
     <script src="filters.js"></script>
     <script src="handlers.js"></script>
