handle media reactions in widget

--- a/widget/index.html
+++ b/widget/index.html
@@ -9,6 +9,7 @@
     <link href="../../../styles/siteIcons.css" rel="stylesheet">
     <link href="../../../scripts/owlCarousel/owlCarousel.css" rel="stylesheet">
     <link href="../../../styles/transitionAnimation.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../../styles/components/reactions/reactions.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
@@ -24,6 +25,7 @@
     <script src="../../../scripts/buildfire.min.js"></script>
     <script src="../../../scripts/buildfire/services/fileSystem/fileManager.js"></script>
     <script src="../../../scripts/buildfire/components/drawer/drawer.js"></script>
+    <script src="../../../scripts/buildfire/components/reactions/reactions.js"></script>
     <script src="../../../scripts/angular/angular.min.js"></script>
     <script src="../../../scripts/angular/angular-route.min.js"></script>
     <script src="../../../scripts/angular/angular-animate.min.js"></script>
